Fix usePointerClick on mobile and hybird event
- port event handling logic from original project
- prevent hybird device trigger handlerDown twice
- cleanup logic, move handler logic to helper func

--- a/src/styles/components/virtual-keyboard.module.scss
+++ b/src/styles/components/virtual-keyboard.module.scss
@@ -27,6 +27,7 @@
 
     .key {
       .pad {
+        @include mixin-disable-selection;
         position: absolute;
         padding: 0.2rem;
         height: 100%;
@@ -43,6 +44,7 @@
     .key .label {
       @include mixin-w-h-fill;
       @include mixin-w-h-min;
+      @include mixin-disable-selection;
 
       border: 2px solid var(--color-text-plain);
       border-radius: 0.375rem;
